Avoid use of inefficient constructors
Original author: jluehe
Date: 2006-10-05 16:21:38+00:00

svn path=/trunk/; revision=589