@@ -38,7 +38,7 @@ import org.apache.jasper.JasperException;
  */
 class ScriptingVariabler {
 
-    private static final Integer MAX_SCOPE = new Integer(Integer.MAX_VALUE);
+    private static final Integer MAX_SCOPE = Integer.valueOf(Integer.MAX_VALUE);
 
     /*
      * Assigns an identifier (of type integer) to every custom tag, in order
