@@ -196,37 +196,37 @@ public class JspRuntimeLibrary {
 	    return new Boolean(s);
 	} else if (target == Byte.class) {
 	    if (isNullOrEmpty)
-		return new Byte((byte) 0);
+		return Byte.valueOf((byte) 0);
 	    else
 		return new Byte(s);
 	} else if (target == Character.class) {
 	    if (isNullOrEmpty)
-		return new Character((char) 0);
+		return Character.valueOf((char) 0);
 	    else 
 		return new Character(s.charAt(0));
 	} else if (target == Double.class) {
 	    if (isNullOrEmpty)
-		return new Double(0);
+		return Double.valueOf(0);
 	    else
 		return new Double(s);
 	} else if (target == Float.class) {
 	    if (isNullOrEmpty)
-		return new Float(0);
+		return Float.valueOf(0);
 	    else
 		return new Float(s);
 	} else if (target == Integer.class) {
 	    if (isNullOrEmpty)
-		return new Integer(0);
+		return Integer.valueOf(0);
 	    else
 		return new Integer(s);
 	} else if (target == Short.class) {
 	    if (isNullOrEmpty)
-		return new Short((short) 0);
+		return Short.valueOf((short) 0);
 	    else
 		return new Short(s);
 	} else if (target == Long.class) {
 	    if (isNullOrEmpty)
-		return new Long(0);
+		return Long.valueOf(0);
 	    else
 		return new Long(s);
         } else if (target.isEnum()) {
@@ -254,11 +254,11 @@ public class JspRuntimeLibrary {
 		return getValueFromBeanInfoPropertyEditor(
 				    t, propertyName, s, propertyEditorClass);
 	    } else if ( t.equals(Boolean.class) || t.equals(Boolean.TYPE) ) {
-                if (s.equalsIgnoreCase("on") || s.equalsIgnoreCase("true"))
-                    s = "true";
-                else
-                    s = "false";
-                return new Boolean(s);
+                if (s.equalsIgnoreCase("on") || s.equalsIgnoreCase("true")) {
+                    return Boolean.TRUE;
+                } else {
+                    return Boolean.FALSE;
+                }
             } else if ( t.equals(Byte.class) || t.equals(Byte.TYPE) ) {
                 return new Byte(s);
             } else if (t.equals(Character.class) || t.equals(Character.TYPE)) {
@@ -400,35 +400,35 @@ public class JspRuntimeLibrary {
     }
 
     public static String toString(byte b) {
-        return new Byte(b).toString();
+        return Byte.toString(b);
     }
 
     public static String toString(boolean b) {
-        return new Boolean(b).toString();
+        return Boolean.toString(b);
     }
 
     public static String toString(short s) {
-        return new Short(s).toString();
+        return Short.toString(s);
     }
 
     public static String toString(int i) {
-        return new Integer(i).toString();
+        return Integer.toString(i);
     }
 
     public static String toString(float f) {
-        return new Float(f).toString();
+        return Float.toString(f);
     }
 
     public static String toString(long l) {
-        return new Long(l).toString();
+        return Long.toString(l);
     }
 
     public static String toString(double d) {
-        return new Double(d).toString();
+        return Double.toString(d);
     }
 
     public static String toString(char c) {
-        return new Character(c).toString();
+        return Character.toString(c);
     }
     // __end toStringMethod
 
@@ -467,7 +467,7 @@ public class JspRuntimeLibrary {
 	    } else if (t.equals(Boolean.class)) {
 		Boolean[] tmpval = new Boolean[values.length];
 		for (int i = 0 ; i < values.length; i++)
-		    tmpval[i] = new Boolean (values[i]);
+		    tmpval[i] = Boolean.valueOf(values[i]);
 		method.invoke (bean, new Object[] {tmpval});
 	    } else if (t.equals(Short.class)) {
 		Short[] tmpval = new Short[values.length];
@@ -771,7 +771,7 @@ public class JspRuntimeLibrary {
     {
 	try {
             Method method = getWriteMethod(bean.getClass(), prop);
-	    method.invoke(bean, new Object[] { new Boolean(value) });
+	    method.invoke(bean, new Object[] { Boolean.valueOf(value) });
 	} catch (Exception ex) {
 	    throw new JasperException(ex);
 	}	
